out/atteva/blockscout-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yml
    kompose.service.expose: "true"
    kompose.version: 1.24.0 (4a2a0458)
    kompose.volume.size: 10Gi
  creationTimestamp: null
  labels:
    io.kompose.service: blockscout
  name: blockscout
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: blockscout
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker-compose.yml
        kompose.service.expose: "true"
        kompose.version: 1.24.0 (4a2a0458)
        kompose.volume.size: 10Gi
      creationTimestamp: null
      labels:
        io.kompose.service: blockscout
    spec:
      containers:
        - args:
            - |
              echo 'Blockscout' && mix do ecto.create; mix do ecto.migrate ;  mix phx.server; tail -f /dev/null

          command:
            - /bin/sh
            - -xc
          image: smartnode31/blockscout
          name: blockscout
          ports:
            - containerPort: 4000
          resources: {}
      restartPolicy: Always
status: {}
