out/atteva/mrp-node-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yml
    kompose.version: 1.24.0 (4a2a0458)
    kompose.volume.size: 10Gi
  creationTimestamp: null
  labels:
    io.kompose.service: jmes_node
  name: jmes-node
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: jmes_node
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker-compose.yml
        kompose.version: 1.24.0 (4a2a0458)
        kompose.volume.size: 10Gi
      creationTimestamp: null
      labels:
        io.kompose.service: jmes_node
    spec:
      containers:
        - args:
            - --config
            - /etc/openethereum/archive-node.toml
            - --chain
            - /etc/openethereum/genesis.json
            - --reserved-peers
            - /etc/openethereum/bootstrap.txt
          image: openethereum/openethereum
          name: archive-jmes-node
          ports:
            - containerPort: 8545
            - containerPort: 8546
          resources: {}
          volumeMounts:
            - mountPath: /etc/openethereum/archive-node.toml
              name: ethconf
              subPath: archive-node.toml
            - mountPath: /etc/openethereum/genesis.json
              name: genesis
              subPath: genesis.json
            - mountPath: /etc/openethereum/bootstrap.txt
              name: bootpeers
              subPath: bootstrap.txt
            - mountPath: /home/openethereum/.local/share/openethereum/
              name: jmes-data
      restartPolicy: Always
      volumes:
        - configMap:
            items:
              - key: archive-node.toml
                path: archive-node.toml
            name: ethconf
          name: ethconf
        - configMap:
            items:
              - key: genesis.json
                path: genesis.json
            name: genesis
          name: genesis
        - configMap:
            items:
              - key: bootstrap.txt
                path: bootstrap.txt
            name: bootpeers
          name: bootpeers
        - name: jmes-data
          persistentVolumeClaim:
            claimName: jmes-data
status: {}
