out/atteva/blockscout-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yml
    kompose.service.expose: "true"
    kompose.version: 1.24.0 (4a2a0458)
    kompose.volume.size: 10Gi
  creationTimestamp: null
  labels:
    io.kompose.service: blockscout
  name: blockscout
  type: LoadBalancer
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 4000
  selector:
    io.kompose.service: blockscout
status:
  loadBalancer: {}
