out/atteva/mrp-node-service.yaml

apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yml
    kompose.version: 1.24.0 (4a2a0458)
    kompose.volume.size: 10Gi
  creationTimestamp: null
  labels:
    io.kompose.service: jmes_node
  name: jmes-node
spec:
  ports:
    - name: "8545"
      port: 8545
      targetPort: 8545
    - name: "8546"
      port: 8546
      targetPort: 8546
  selector:
    io.kompose.service: jmes_node
status:
  loadBalancer: {}
